discussion/kv_engine/181529/181529_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54272: Don't parse audit_events.json at runtime

We don't support modifying this file at the customer site
so we can simplify the logic by generate code at build
time

This is an initial refactor for a followup refactor where
we'll add support for a more fine grained audit configuration.

Change-Id: Ib2b78b6e8f6e42463fa3e0f2193cc1e797137321

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-26 12:36:37.000000000
Message: 
Uploaded patch set 21.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-26 12:48:11.000000000
Message: 
Patch Set 21: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50706/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50706/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11301/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11301/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22939/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22939/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/212/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/212/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11210/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11210/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23921/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23921/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23513/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23513/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24753/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24753/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31937/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31937/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21481/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.cc:27:25: error: no type named "out_of_range" in namespace "std" [clang-diagnostic-error]
    } catch (const std::out_of_range&) {
                        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21481/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.cc:27:25:
error: no type named "out_of_range" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21481/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42549/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit_descriptor_manager.cc:27:25:
error: no type named "out_of_range" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42549/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20750/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
